--- a/ex55/style.css
+++ b/ex55/style.css
@@ -1,48 +1,7 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap');
 
-:root {
-    /* dark shades of primary color*/
-    --clr-primary-1: hsl(205, 86%, 17%);
-    --clr-primary-2: hsl(205, 77%, 27%);
-    --clr-primary-3: hsl(205, 72%, 37%);
-    --clr-primary-4: hsl(205, 63%, 48%);
-    /* primary/main color */
-    --clr-primary-5: hsl(205, 78%, 60%);
-    /* lighter shades of primary color */
-    --clr-primary-6: hsl(205, 89%, 70%);
-    --clr-primary-7: hsl(205, 90%, 76%);
-    --clr-primary-8: hsl(205, 86%, 81%);
-    --clr-primary-9: hsl(205, 90%, 88%);
-    --clr-primary-10: hsl(205, 100%, 96%);
-    /* darkest grey - used for headings */
-    --clr-grey-1: hsl(209, 61%, 16%);
-    --clr-grey-2: hsl(211, 39%, 23%);
-    --clr-grey-3: hsl(209, 34%, 30%);
-    --clr-grey-4: hsl(209, 28%, 39%);
-    /* grey used for paragraphs */
-    --clr-grey-5: hsl(210, 22%, 49%);
-    --clr-grey-6: hsl(209, 23%, 60%);
-    --clr-grey-7: hsl(211, 27%, 70%);
-    --clr-grey-8: hsl(210, 31%, 80%);
-    --clr-grey-9: hsl(212, 33%, 89%);
-    --clr-grey-10: hsl(210, 36%, 96%);
-    --clr-white: #fff;
-    --clr-red-dark: hsl(360, 67%, 44%);
-    --clr-red-light: hsl(360, 71%, 66%);
-    --clr-green-dark: hsl(125, 67%, 44%);
-    --clr-green-light: hsl(125, 71%, 66%);
-    --clr-black: #222;
-    --ff-primary: 'Roboto', sans-serif;
-    --ff-secondary: 'Open Sans', sans-serif;
-    --transition: all 0.3s linear;
-    --spacing: 0.1rem;
-    --radius: 0.25rem;
-    --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-    --max-width: 1170px;
-    --fixed-width: 620px;
-  }
+
   *,
   ::after,
   ::before {
@@ -52,120 +11,151 @@
     text-decoration: none;
     list-style-type: none;
   }
-  body {
-    min-height: 200vh;
-    font-family: var(--ff-secondary);
-    background: var(  --clr-grey-1);
-    color: var(--clr-white);
-    line-height: 1.5;
-    font-size: 0.875rem;
-  }
+body{
+  background: linear-gradient( 195deg, rgb(59, 0, 136),rgb(28, 1, 75), rgb(57, 2, 116), rgb(70, 2, 119), rgb(32, 15, 40));
+  min-height: 200vh;
+
+}
+header{
+  position: fixed;
+  top:0;
+  left:0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: .6s;
+  padding:40px 100px;
+  background: rgba(0, 0, 0, 0.332);
+  width:100%;
+}
+header .logo{
+  position: relative;
+  font-weight:  700;
+  color:#fff;
+  font-size: 2em;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  transition:  .6s;
+
+}
+header ul {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+header ul li{
+  position: relative;
+
+}
+
+header ul li a{
+  position: relative;
+  margin: 0 35px;
+  color:rgb(255, 254, 254);
+  letter-spacing: 2px;
+  font-weight: 500px;
+  transition: .6s;
+}
+ header ul li {
  
-  header{
-    position: fixed;
-    top:0;
-    left:0;
+  position: relative;
+  left: 12rem;
+}
+header ul li a:hover{
+  color: rgb(133, 0, 0);
+}
+header.sticky{
+  padding: 5px 100px;
+  background: #fff;
+}
+header.sticky .logo,
+header.sticky ul li a{
+  color:black;
+
+}
+#btn-mobile{
+  position: absolute;
+  display: none;
+  left: 25rem;
+  color: white;
+  
+}
+@media(max-width:750px){
+
+
+   #menu{ 
+    display: block;
+    position: absolute;
     width:100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    transition: 0.7s;
-    padding: 37px 100px;
+    top:70px;
+    right: 0;
+    height: 98vh;
+    line-height: 50px;
+    background: rgb(1, 0, 0);
+    font-size: 1.5em;
+   visibility: hidden;
+   overflow-y: hidden;
+    z-index:1000;
+    
    
   }
-  img{
-    width: 5rem;
-    height: 3rem;
-  }
-  header.sticky{
-    background: var(--clr-white);
-  }
-  header .logo{
-    position: relative;
-    font-weight: 700;
-    color: var(--clr-white);
-    letter-spacing: 1px;
-    font-size:  1.5rem;
-    text-transform: uppercase;
-    transition: 0.7s;
-    
-  }
-  header nav ul{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  header nav ul li a{
-    position: relative;
-    margin:0 15px;
-    color: var(--clr-white);
-    letter-spacing: 1px;
-    font-size: 18px;
-    font-weight: 700px;
-    transition: 0.7s;
-  }
-  header nav ul li a:hover{
-    color: #999;
-  }
-  header.sticky .logo,
-  header.sticky ul  li a{
-    color:#222;
-  }
-  .banner{
-    width: 100%;
-    height:100vh;
-  }
-  .burgue{
-    display: none;
-    cursor: pointer;
-  }
-.bar{
-  display: block;
-  width: 25px;
-  height: 3px;
-  margin: 5px auto;
-  -webkit-transition: all 0.3s ease-in-out;
-   transition: all 0.3s ease-in-out;
-   background-color: white;
-}
-@media(max-width: 768px){
-  .burgue{
-    display: block;
-  }
-  header{
+  .logo{
     display: none;
   }
-  .burgue.active .bar:nth-child(1){
-    transform: translateY(8px) rotate(45deg);
-  }
-  .burgue.active .bar:nth-child(2){
-    opacity: 0;
-  }
-  .burgue.active .bar:nth-child(3){
-    transform: translateY(-8px) rotate(-45deg);
+
+  #nav.active #menu{
+    height:  calc(100vh -70px);
+   overflow-y: auto;
+    visibility:visible;
     
   }
-  .nav-menu{
-    position: fixed;
-    left: -100%;
-    top:70px;
-    gap:0;
-    flex-direction: column;
-    background-color: white;
-    text-align: center;
-    transition: 0.3s;
+  
+  #menu a{
+    padding: .5rem 0;
+    margin:0 .5rem;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.5);
   }
-  .nav-menu.active{
-    display: block;
-    opacity: 1;
+  #btn-mobile{
+   display: flex;
+   padding: .5rem 1rem;
+   font-size:  1rem;
+   border:none;
+   background: none;
+   cursor: pointer;
+   gap:.5rem;
   }
 
-  
-  
+  #hamburgue{
+
+    width:20px;
+    border-top: 2px solid;
+  }
+  #hamburgue::after,#hamburgue::before{
+    content: '';
+    display: block;
+    width:20px;
+    height: 2px;
+    border-top: 2px solid;
+    background: currentColor;
+    margin-top: 5px;
+    transition: .3s;
+    position: relative;
+  }
+  #hamburgue.active{
+    border-top-color: transparent;
+  }
+  #hamburgue.active::before{
+    transform: rotate(135deg);
+
+  }
+   #hamburgue.active::after{
+    transform: rotate(-135deg);
+    top: -7px;
+
+
+
 }
 
-
- 
- 
- 
+}
