--- a/ex55/style.css
+++ b/ex55/style.css
@@ -16,102 +16,95 @@ html,body{
   height:100%;
   left:0;
   font-family: 'Open Sans',  serif;
-  background-color: rgba(238, 242, 255, 0.4);
-}
-#logo{
-  font-size: 1.3rem;
-  color: rgb(30, 28, 28);
-}
-header{
-  height: 70px;
-  padding: 1rem;
-  display: flex;
-  position: fixed;
-  width: 100%;
-  justify-content: space-between;
-  align-items: center;
-  background: rgb(168, 168, 190);
+  background-color:#373c36;
   
 }
 #menu {
-  display: flex;
-  gap: 3rem;
-  
-}
-#menu  li a{
-  color:rgb(16, 12, 12);
-}
-#menu li a:hover{
-  color:brown;
+  width:35px;
+  height:30px;
+  margin: 30px  0 20px 20px;
+  cursor:pointer;
+  position: relative;
  
 }
 
-#btn-mobile{
-  display: none;
-}
-@media(max-width:750px){
-
-  #btn-mobile{
-    display: block;
-   
-    
-    
-  }
-  #nav.active #menu{
-    height: calc(100vh - 70px);
-    visibility: visible;
-    overflow-y: auto;
-   
-  }
-  #menu{
-    display: block;
-    position: absolute;
-    width:100%;
-    top:70px;
-    right:0px;
-    background: rgb(168, 168, 190) ;
-    height: 0px;
-    transition: .6s;
-    z-index: 1000;
-    visibility: hidden;
-    overflow-y: hidden;
-    
-    
-    
-  }
-#menu .Home{
-    font-size: 2rem;
-    padding: 0 2rem ;
-    margin:  0 30vw;
-    border-bottom:  2px  solid rgb(87, 85, 85);
-
-  }
-  .Home{
-    position: relative;
-    line-height: 3.5rem;
-  }
-  #btn-mobile{
-    display: flex;
-    padding: .5rem 1rem;
-    font-size:  1rem;
-    border:  none;
-    background: none;
-    cursor: pointer;
-    gap:.5rem;
-  }
-#hambugue{
-  width: 20px;
-  border-top: 2px solid;
-}
-#hambugue::after, #hambugue::before{
-  content: '';
+.bar{
+  height: 5px;
+  width: 100%;
+  background-color: #b81568;
   display: block;
-  width:20px;
-  height: 2px;
-  background: black;
-  margin-top: 5px;
+  border-radius: 5px;
+  transition: .3s ease;
+ 
+}
+#bar1{
+  transform: translateY(-4px) ;
+}
+#bar3{
+  transform: translateY(4px);
+}
+
+
+.nav li a{
+  color:white;
+
+
+}
+.nav li a:hover{
+  font-weight: bold;
   
+}
+.nav li{
+  padding:  16px 0;
+}
+.nav{
+  padding:0;
+  margin: 0 20px;
+  transition:  .3s ease;
+  display: none;
+
+}
+.menu-bg #menu-bar{
+  top: 0;
+  left:0;
+  position:absolute;
+}
+.menu-bg{
+  z-index:1;
+  width:0;
+  height: 0;
+  margin: 30px 0 20px 20px;
+  background: radial-gradient(circle,#e94498,#b81968);
+  border-radius: 50%;
+  transition: .3s ease;
+}
+#menu-bar{
+  z-index: 2;
+}
+.change-bg{
+  width: 550px;
+  height: 540px;
+  transform: translate(-60% -30%);
+}
+.change .bar{
+  background-color: white;
+}
+.change .bar1{
+  transform: translateY(4px) rotateZ(-45deg);
+}
+.change .bar3{
+  transform: translateY(-6px) rotateZ(45deg);
+}
+.change .bar2{
+  opacity:0;
+}
+.change{
+  display: block;
 
 }
 
-}
+
+
+
+
+
