--- a/ex55/style.css
+++ b/ex55/style.css
@@ -14,108 +14,97 @@
 html,body{
   width:100%;
   height:100%;
-  left:0;
   font-family: 'Open Sans',  serif;
-  background-color:#373c36;
-  
+  background-color: darkslateblue;
 }
-#menu {
-  width:35px;
-  height:30px;
-  margin: 30px  0 20px 20px;
-  cursor:pointer;
-  position: relative;
- 
+.wrapper{
+  width:90%;
+  margin: 0 auto;
 }
-
-.bar{
-  height: 5px;
-  width: 100%;
-  background-color: #b81568;
-  display: block;
-  border-radius: 5px;
-  transition: .3s ease;
- 
-}
-#bar1{
-  transform: translateY(-4px);
-}
-#bar3{
-  transform: translateY(4px);
-}
-
-
-.nav li a{
-  color:white;
-
-
-}
-.nav li a:hover{
-  font-weight: bold;
-  
-}
-.nav li{
-  padding:  16px 0;
-}
-.nav{
-  padding:0;
-  margin: 0 20px;
-  transition:  .3s ease;
-  display: none;
-
-}
-.menu-bg, #menu-bar{
-  top: 0;
-  left:0;
-  position:absolute;
-}
-.menu-bg{
+.container{
+  float:right;
+  height:25px;
+  width:40px;
   display: flex;
+  margin-top: 20px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+}
+.menulogo{
+  height: 3px;
+  width:30px;
+  background-color: snow;
+}
+.container.showmenu .menulogo:nth-child(1){
+  transform: translateY(5.8px) rotate(135deg);
+  background: radial-gradient(  rgb(57, 1, 1), rgb(239, 255, 93));
+  box-shadow:  2px 2px 5px rgb(201, 6, 219), -2px -2px 5px rgb(201, 6, 219);
+ 
+  
+
+
+}
+.container.showmenu .menulogo:nth-child(2){
+  opacity: 0;
+  
+ 
+
+}
+.container.showmenu  .menulogo:nth-child(3){
+  transform: translateY(-16px) rotate(-135deg);
+  background: radial-gradient(  rgb(57, 1, 1), rgb(239, 255, 93));
+  box-shadow:  -2px -2px 5px rgb(201, 6, 219),2px 2px 5px rgb(201, 6, 219);
+ 
+
+}
+.menu{
+  width: 50%;
+  height: 100vh;
+  background-color: slateblue;
+  transform: translateX(-500px);
+  transition: 0.5s;
+}
+.menu li{
+  border-bottom:  1px solid rgb(130,117,218);
+  padding: 30px 0;
+  text-align: center;
+}
+.showmenu{
+  transform: translateX(0);
+}
+.menu li:last-child{
+  border-bottom: none;
+}
+.menu li:first-child a{
+  font-weight: bold;
+
+}
+.menu li a{
   position: relative;
+  color: snow;
+  font-size: 20px;
+  transition: font-weight .2s;
+  
+}
+.menu li a:hover{
+  font-weight: bold;
+}
+@media screen and (min-width:1000px){
+  .menu{
+    width:500px;
+  }
+}
+@media screen and (max-width:600px){
+  .menu li a{
+    font-size: 16px;
+  }
 
-  z-index:-1;
-  width:0;
-  height: 0;
-  margin: 30px 0 20px 20px;
-  background: radial-gradient(circle,#e94498,#b81968);
-  border-radius: 50%;
-  transition: .3s ease;
-}
-#menu-bar{
-  z-index: 2;
-}
-.change #menu-bg{
-  border:  2px solid black;
-  width: 500px;
-  height: 400px;
-  right: 12rem;
-  top: -200rem;
-  left:-50px;
-  transform: translate(-60% -30%);
-  display: block ;
-}
-.change .bar{
-  background-color: white;
-}
-.change #bar1{
-  transform: translateY(4px) rotateZ(-45deg);
-}
-.change #bar3{
-  transform: translateY(-6px) rotate(45deg);
-}
-.change #bar2{
-  opacity:0;
-}
-.change{
-  display: block;
+
+
 
 }
-.change .menu{
- display: flex;
- position: relative;
- left:50px;
-}
-
 
 
 
