--- a/ex55/style.css
+++ b/ex55/style.css
@@ -82,36 +82,50 @@ ul li a:hover{
   width:30px;
   height: 2px;
   margin-top: 6px;
+  position: relative;
+  transition: .3s;
 }
 @media(max-width:700px){
   .menu{
     display: none;
+    visibility: hidden;
+    overflow-y: hidden;
   }
  
   .btn-menu{
     position: fixed;
     display: flex;
     top:30px;
+    
   }
   .menu.active{
     position: relative;
     display: block;
     margin-top: 35rem;
+    visibility: visible;
+    overflow-y: visible;
+   
     
    
 
   }
  
-  .btn-menu.active .hamb::after{
-    
-
-  }
-  .btn-menu.active .hamb::before{
-
-    
-    
-  }
+ .btn-menu.active .hamb{
+  border-top-color: transparent;
+ 
+}
+.btn-menu.active .hamb::before{
+  transform: rotate(135deg);
   
+
+}
+.btn-menu.active .hamb::after{
+  transform: rotate(-135deg);
+  top:-7px;
+  
+
+  
+}
   
   .logo.active{
     display: none;
@@ -134,6 +148,7 @@ ul li a:hover{
     padding-bottom: 600px;
     background:linear-gradient(to bottom,rgb(255, 223, 248),rgb(185, 253, 247),lightblue);
     box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.299);
+    transition: .2s;
   }
   
  
